--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
   "success_url": "https://github.com/paduhq/deegram",
   "website": "https://github.com/paduhq/deegram",
   "env": {
-    "APP_ID": {
+    "API_ID": {
       "description": "Get this value from https://my.telegram.org",
       "value": ""
     },
@@ -17,7 +17,7 @@
       "description": "Get this value from https://my.telegram.org",
       "value": ""
     },
-    "TG_BOT_TOKEN": {
+    "BOT_TOKEN": {
       "description": "get this value from @BotFather",
       "value": ""
     },
